# smsfusion-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/workflows/: ci.yaml  ci.yml  deploy_public.yaml  make_release.yaml
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/_templates/: breadcrumbs.html  layout.html
docs/_templates/autosummary/: class.rst
docs/reference/: index.rst
docs/release_notes/: generated.md  index.md  index.rst
docs/user_guide/: ains--gnss-compass.rst  imu-noise.rst  index.rst  installation.rst  quickstart.rst  vru.rst
src/smsfusion/: __init__.py  _ahrs.py  _coning_sculling.py  _ins.py  _mekf.py  _mini.py  _noise_models.py  _smoothing.py  _something.py  _transforms.py  _vectorops.py  numba_optimized.py
src/smsfusion/benchmark/: __init__.py  _benchmark.py  _coning.py  _simulate.py
src/smsfusion/calibrate/: __init__.py  _calibrate.py
src/smsfusion/constants/: __init__.py  _constants.py
src/smsfusion/noise/: __init__.py  _allan.py  _noise.py  _noise_models.py
src/smsfusion/simulate/: __init__.py  _coning.py  _montecarlo.py  _sim_ins.py  _simulate.py
tests/: test_ahrs.py  test_benchmark.py  test_calibrate.py  test_coning_sculling.py  test_constants.py  test_ins.py  test_mekf.py  test_mekf_benchmark.py  test_noise.py  test_noise_models.py  test_numba_optimized.py  test_simulate.py  test_smoothing.py  test_something.py  test_transforms.py  test_vectorops.py
tests/testdata/: IMUNoise.csv  NoiseModel_GM.csv  NoiseModel_GMdrift.csv  NoiseModel_RW.csv  NoiseModel_RWdrift.csv  NoiseModel_nodrift.csv  ains_ahrs_imu - readme.txt  ains_ahrs_imu.parquet  gauss_markov.csv  random_walk.csv  white_noise.csv
tests/testdata/coning_sculling/: coning_sculling_sim_highfreq_20251218A.csv  coning_sculling_sim_lowfreq_20251218A.csv
