[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smsfusion"
authors = [
  { name="4Subsea", email="python@4subsea.com" },
]
description = "Sensor fusion algorithms and utilities for SMS Motion"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
  "numba",
  "numpy",
  "scipy"  # required by numba
]

[project.urls]
"Homepage" = "https://github.com/4Subsea/smsfusion-python"
"Bug Tracker" = "https://github.com/4Subsea/smsfusion-python/issues"

[tool.hatch.version]
path = "src/smsfusion/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "black",
  "coverage[toml]",
  "isort",
  "mypy",
  "pandas",  # used as to load data
  "pyarrow",  # pandas dependency
  "pytest",
  "pytest-cov",
  "scipy"  # used as reference implementation for rotations
]

[tool.hatch.envs.test.scripts]
style = [
  "black --check .",
  "isort --check . --profile black"
]
unit = "pytest --cov-config=pyproject.toml --cov --cov-report html"
type = "mypy"
complete = [
  "style",
  "type",
  "unit",
]

[tool.hatch.envs.docs]
dependencies = [
  "sphinx",
  "myst-parser",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html ./docs ./build/html"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true
source = ["src/smsfusion"]

[tool.coverage.report]
ignore_errors = false
show_missing = true
omit = ["src/smsfusion/__about__.py"]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  "AbstractMethodError",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.mypy]
files = ["src/smsfusion"]
strict = true
ignore_missing_imports = true
